--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,14 @@ li {
   list-style: none;
 }
 
+body {
+  white-space: nowrap;
+}
+
 .container {
   width: 100%;
-  padding: 0 15%;
+  height: auto;
+  padding: 0 12%;
 }
 
 #wrap {
@@ -26,6 +31,8 @@ li {
   height: 100%;
   /* background-color: aqua;*/
 }
+
+/* =====헤더==== */
 
 header {
   width: 100%;
@@ -184,23 +191,23 @@ header::before {
   cursor: pointer;
 }
 
-/* 배너 */
+/* =====배너=====*/
 .banner {
   background: url("../images/banner_img_row.png") no-repeat;
-  background-size: contain;
+  background-size: cover;
   display: block;
   width: 100%;
-  height: 1600px;
+  height: 1000px;
   position: relative;
   top: 0;
   left: 0;
-  height: 1200px;
   z-index: 1;
 }
 .banner-textBox {
   /* display: flex;
   flex-direction: column; */
   position: absolute;
+  height: auto;
   top: 500px;
   transform: translateY(-50%);
   z-index: 9999;
@@ -230,7 +237,7 @@ header::before {
 .banner-swiper {
   display: block;
   position: absolute;
-  bottom: 200px;
+  bottom: 100px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 99999;
@@ -247,42 +254,45 @@ header::before {
   background-color: rgba(255, 89, 46, 0.5);
 }
 
-/* 신메뉴 */
+/* =====신메뉴===== */
 .new-menu {
+  display: flex;
   background: url("../images//bg_news-item.png") no-repeat;
-  background-position: 0 -100px;
-  width: 100%;
+  /* background-position: 0; */
   width: 100%;
   height: 1000px;
   margin: 0 auto;
   position: relative;
+  top: 0;
 }
 
 .new-menu-bg {
 }
 .new-menu_titleBOX {
-  margin: 20px 0;
+  padding-top: 120px;
 }
 
 .new-menu_titleBOX > * {
-  margin-bottom: 45px;
+  margin-bottom: 35px;
 }
 
 .new-menu_titleBOX h3 {
-  font-size: 35px;
+  font-size: 40px;
   color: #f43b00;
 }
 
 .new-menu_titleBOX h1 {
-  font-size: 60px;
+  font-size: 70px;
+  font-weight: bold;
+  letter-spacing: -2px;
   color: #f43b00;
 }
 
 .new-menu_titleBOX p {
-  font-size: 21px;
+  font-size: 25px;
   color: #1a1a1a;
-  font-weight: 300;
-  line-height: 33px;
+  font-weight: 400;
+  line-height: 35px;
 }
 
 .new-menu_view {
@@ -296,15 +306,15 @@ header::before {
 }
 
 /* 신메뉴 리스트 */
-
 .new-menu-list {
-  width: 58vw;
+  width: 1100px;
   overflow: hidden;
   position: absolute;
-  top: 0;
+  top: 150px;
   right: 0;
   font-size: 16px;
   text-align: center;
+  color: #f43b00;
 }
 
 .new-menu-list ul {
@@ -312,22 +322,69 @@ header::before {
 }
 
 .new-menu-list ul li {
-  margin: 0 65px;
+  margin: 0 30px;
 }
 
 .new-menu-list ul li > * {
   margin-bottom: 10px;
 }
+
 .new-menu-list ul li img {
-  width: 12.6875vw;
+  width: 80%;
+  /* width: 12.6875vw; */
 }
 
 /* 신메뉴 리스트 텍스트 */
 .menu-name {
-  font-size: 22px;
-  font-weight: 700;
+  font-size: 25px;
+  font-weight: 600;
 }
 
 .menu-text {
   margin-top: 20px;
+  color: #1a1a1a;
+}
+
+/* ===== 시그니처 ===== */
+
+.signature {
+  width: 100%;
+  height: 1000px;
+  background: url("../images/bg_signature-item.png") no-repeat;
+  background-position: 100% 0;
+  position: relative;
+  color: #1a1a1a;
+}
+
+.signature-titleBox {
+  display: block;
+  padding-top: 120px;
+  /* position: absolute; */
+}
+
+.signature-titleBox h3 {
+  font-size: 50px;
+  margin-bottom: 40px;
+  color: #f43b00;
+}
+
+.signature-titleBox p {
+  font-size: 25px;
+  margin-bottom: 10px;
+  font-weight: 100;
+  line-height: 35px;
+}
+
+.signature-titleBox :nth-child(2) {
+  font-weight: 600;
+  line-height: 35px;
+}
+
+.signature-titleBox button {
+  font-size: 25px;
+  padding: 15px 50px;
+  background-color: transparent;
+  border: 1px solid #ff592e;
+  color: #ff592e;
+  font-weight: 600;
 }
