--- a/css/main.css
+++ b/css/main.css
@@ -193,8 +193,8 @@ header::before {
 
 /* =====배너=====*/
 .banner {
-  background: url("../images/banner_img_row.png") no-repeat;
-  background-size: cover;
+  /* background: url("../images/banner_img_row.png") no-repeat;
+  background-size: cover; */
   display: block;
   width: 100%;
   height: 1000px;
@@ -203,6 +203,16 @@ header::before {
   left: 0;
   z-index: 1;
 }
+
+/* 배경이미지 img 넣기 */
+/* .banner-texBox img {
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: -10%;
+  width: 100%;
+} */
+
 .banner-textBox {
   /* display: flex;
   flex-direction: column; */
@@ -218,20 +228,26 @@ header::before {
   /* font-size: 54px; */
   font-size: 60px;
   width: 100%;
-  line-height: 90px;
+  line-height: 80px;
   letter-spacing: -5px;
-  color: #f43b00;
+  color: #ff592e;
   margin-bottom: 90px;
 }
 
-.banner-textBox > .banner-bt-btn {
+.banner-bt-btn {
   /* font-size: 24px; */
-  font-size: 27px;
+  font-size: 25px;
   font-weight: 900;
   color: #ff592e;
   border: 1px solid #ff592e;
-  padding: 20px 50px;
+  padding: 20px 40px;
   cursor: pointer;
+}
+
+/* .banner-bt-btn */
+.strawberry {
+  color: #fff;
+  border: 1px solid #fff;
 }
 
 .banner-swiper {
@@ -244,7 +260,7 @@ header::before {
   height: 1px;
 }
 
-.banner-swiper-bullet {
+/* .banner-swiper-bullet {
   display: inline-block;
   width: 10px;
   height: 10px;
@@ -252,7 +268,7 @@ header::before {
   border: 1px solid transparent;
   border-radius: 50%;
   background-color: rgba(255, 89, 46, 0.5);
-}
+} */
 
 /* =====신메뉴===== */
 .new-menu {
@@ -266,8 +282,6 @@ header::before {
   top: 0;
 }
 
-.new-menu-bg {
-}
 .new-menu_titleBOX {
   padding-top: 120px;
 }
@@ -349,11 +363,11 @@ header::before {
 
 .signature {
   width: 100%;
-  height: 1000px;
+  height: 800px;
   background: url("../images/bg_signature-item.png") no-repeat;
   background-position: 100% 0;
   position: relative;
-  color: #1a1a1a;
+  color: rgba(71, 71, 71, 0.8);
 }
 
 .signature-titleBox {
@@ -378,8 +392,12 @@ header::before {
 .signature-titleBox :nth-child(2) {
   font-weight: 600;
   line-height: 35px;
+  color: #1a1a1a;
 }
 
+.signature-titleBox :nth-child(3) {
+  margin-bottom: 30px;
+}
 .signature-titleBox button {
   font-size: 25px;
   padding: 15px 50px;
@@ -387,4 +405,120 @@ header::before {
   border: 1px solid #ff592e;
   color: #ff592e;
   font-weight: 600;
+  margin-top: 60px;
+}
+
+/* notice */
+.notice {
+  display: block;
+  width: 100%;
+  height: 850px;
+}
+
+.notice-header {
+  margin-bottom: 70px;
+}
+
+.notice-title {
+  font-size: 70px;
+  color: #f43b00;
+  font-weight: 800;
+  text-align: center;
+}
+
+.notice-wrap {
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+}
+.notice-list {
+  display: flex;
+  margin: 0 25px;
+}
+
+.notice-list a li {
+  padding: 25px;
+  border: 2px solid #ff592e;
+  color: #ff592e;
+}
+.notice-list a li img {
+  width: 400px;
+}
+
+.notice-textBox {
+  margin: 40px 0 70px 0;
+}
+
+.notice-list-subTitle {
+  font-weight: 600;
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.notice-list-title {
+  width: 100%;
+  height: 50px;
+  font-size: 40px;
+  margin-bottom: 20px;
+  font-weight: 600;
+  overflow: hidden;
+  max-width: 400px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  word-break: break-word;
+}
+
+.notice-textBox p {
+  color: #4b4a4a;
+  font-size: 18px;
+}
+
+/* ===== 서포터즈 ===== */
+.support {
+  width: 100%;
+  height: 800px;
+  background: url("../images/supporter_bg.jpg") no-repeat;
+}
+
+.support-titleBox {
+  padding-top: 150px;
+}
+
+.support-titleBox > * {
+  margin-bottom: 30px;
+}
+
+.support-titleBox h1 {
+  font-size: 55px;
+  line-height: 65px;
+  color: #f43b00;
+}
+
+.support-titleBox p {
+  font-size: 25px;
+  line-height: 35px;
+}
+
+.support-titleBox button {
+  font-size: 25px;
+  padding: 15px 45px;
+  margin-top: 35px;
+  background: transparent;
+  border: 1px solid #1a1a1a;
+}
+
+/* 스와이프 */
+.swiper-pagination {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.swiper-pagination-bullet {
+  background-color: #f43b00;
+  width: 10px;
+  height: 10px;
+  border: 1px solid transparent;
+  border-radius: 50%;
 }
