--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,12 @@ li {
   list-style: none;
 }
 
+html {
+  width: auto;
+}
+
 body {
+  width: 100%;
   white-space: nowrap;
 }
 
@@ -27,67 +32,130 @@ body {
 
 #wrap {
   display: block;
-  width: 100%;
-  height: 100%;
+
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
   /* background-color: aqua;*/
 }
 
 /* =====헤더==== */
 
-header {
-  width: 100vw;
+.header {
+  display: flex;
+  width: 100%;
+  height: 120px;
   position: fixed;
   top: 0;
-  z-index: 999;
-  /* overflow: hidden; */
-  /* background-color: rgba(255, 255, 255, 0.7); */
-  background-color: rgba(255, 255, 255, 0.7);
+  overflow: hidden;
+  z-index: 9999;
+  transition: all 0.4s;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  align-items: center;
 }
-
-/* 서브 메뉴 배경 추가*/
-header::before {
+.header:hover {
+  height: calc(250px + 120px);
+  /* height: 200px; */
+}
+/* 헤더에 hover했을때 나오는 영역 */
+.header::before {
+  width: 100%;
+  height: 100px;
   content: "";
-  display: block;
-  width: 100vw;
-  height: 200px;
   position: absolute;
-  top: 120px;
-  background-color: rgba(255, 255, 255, 0.7);
-  opacity: 0;
+  top: 20px;
+  left: 0;
+  /* background-color: rgba(255, 255, 255, 0.7); */
+  /* border-bottom: 1px solid #d8d8d8; */
 }
 
 .header-inner {
-  width: 90%;
-  height: 120px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  /* max-width: 1800px; */
+  height: 120px;
+  z-index: 1;
+}
+/* logo */
+.header .logo {
+  width: 10%;
+  height: 100%;
+  display: flex;
+  position: absolute;
+}
+
+.header .logo img {
+  width: 120px;
+  height: 120px;
+}
+/* nav */
+.nav {
+  /* background-color: antiquewhite; */
+  /* height: 300px; */
+  width: 90%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.gnb {
+  position: absolute;
+  top: 0;
+  display: flex;
+  gap: 3vw;
+  overflow: hidden;
+  margin-left: 300px;
+
+  /* margin: 0 100px; */
+}
+
+.gnb-title {
   position: relative;
 }
 
-.header-inner .logo {
-  width: 10%;
-  text-align: center;
-
-  /* background-color: rgb(212, 212, 230); */
+.gnb-title::after {
+  display: block;
+  content: "";
+  width: 0%;
+  height: 2px;
+  background-color: #ff592e;
+  position: absolute;
+  top: 75px;
 }
 
-.header-inner .logo img {
-  width: 130px;
+.gnb-title:hover::after {
+  transition: 0.3s ease;
+  width: 100%;
 }
 
-/* 네비게이션 */
-/* 메뉴 정렬  */
-.header-inner .nav {
-  /* margin: 0 auto; */
-  font-size: 19px;
-  display: flex;
-  /* background-color: antiquewhite; */
+.gnb > li {
+  width: 120px;
+}
+
+.gnb > li > a {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 110px;
+  padding: 0 10px;
+}
+.gnb a:hover {
+  color: #ff592e;
+}
+.gnb > li:hover > a {
+  color: #ff592e;
+}
+
+.gnb-title {
+  height: 110px;
 }
 
 /* nav 버튼 */
-.header-inner .header_shop_btn {
+.gnb_shop_btn {
   width: 85px;
   height: 32px;
   border: 1px solid transparent;
@@ -101,149 +169,55 @@ header::before {
   cursor: pointer;
 }
 
-.gnb {
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  /* gap: 30px; */
-  align-items: center;
-  margin: 0 20px;
-  height: 100%;
-  font-size: 17px;
-  /* background-color: rgba(255, 255, 255, 0.5); */
-}
-
-/* 네비게이션 메뉴 */
-.gnb li {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  padding: 0 44px;
-  /* width: 171px; */
-  height: 100%;
-  /* height: 120px; */
-  /* background-color: rgb(223, 213, 200); */
-}
-
-.gnb li a:nth-child(4)::before {
-  content: "";
-  display: block;
-  width: 1px;
-  height: 1px;
+.gnb_shop_btn:hover {
   background-color: #f43b00;
 }
 
-.gnb > li {
-  display: flex;
-  align-items: center;
-}
-
-.gnb li a {
-  font-weight: bold;
-}
-
-.news {
-  position: relative;
-}
-
-.gnb li .news::before {
-  content: "";
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
-  position: absolute;
-  top: -2px;
-  right: -6px;
-  background-color: #f43b00;
-}
-
-/* 헤더 메뉴 호버 효과 */
-.gnb li a:hover {
-  color: #ff592e;
-}
-
-.gnb-title:hover::after {
-  transition: 0.5s ease;
-  width: 100%;
-}
-
-.gnb-title::after {
-  display: block;
-  margin: 10px 0;
-  content: "";
-  width: 0%;
-  height: 2px;
-  background-color: #f43b00;
-}
-
-/* .gnb li a:hover .gnb li .depth2 {
-  display: block;
-}
-
-.gnb:hover header::before {
-  opacity: 1;
-} */
-
-/* 헤더 메인 메뉴, 서브 메뉴 함께 hover */
-/* .gnb > li > a:hover .depth2 > li > a {
-  color: #ff592e;
-}
-
-.gnb > li > a:hover .depth2 {
-  display: block;
-} */
-/* .gnb > li > a:hover .gnb:hover .depth2 {
-  opacity: 1;
-}*/
-
-/* 서브 메뉴 , drop 메뉴*/
 .depth2 {
   display: flex;
-  /* align-items: start; */
-  /* justify-content: center; */
   flex-direction: column;
-  position: absolute;
-  top: 69px;
-  left: 0px;
-  z-index: 999;
-  width: 100%;
-  height: 200px;
-  background-color: #f0eae8;
-
-  opacity: 0;
-  transition: all 0.1s;
-  padding: 20px 0;
-  /* display: none; */
+  align-items: start;
+  justify-content: center;
+  gap: 30px;
+  padding: 40px 10px;
 }
-
-.depth2 li {
-  /* text-align: center; */
-  padding: 10px 0;
+.depth2 > li > a {
+  color: #121212;
+  font-size: 17px;
+  font-weight: 500;
+  /* 숫자만 적으면 font size의 배수로 인식함.(15 * 1.95) */
+  line-height: 1.92;
 }
 
 /* =====배너=====*/
+
 .banner {
   /* background: url("../images/banner_img_row.png") no-repeat;
   background-size: cover; */
   display: block;
-  width: 100vw;
+  width: 100%;
   height: 1000px;
   position: relative;
   top: 0;
-  left: 0;
   right: 0;
+  bottom: 0;
   z-index: 1;
 }
 
+.swiper-slide {
+  width: 100%;
+}
+
 /* 배경이미지 img 넣기 */
-/* .banner-texBox img {
+.banner-texBox img {
   display: block;
   position: absolute;
-  top: 0px;
-  left: -10%;
+  top: 0;
+  left: 0;
+  right: 0;
+  top: 0;
   width: 100%;
-} */
+}
 
 .banner-textBox {
   /* display: flex;
@@ -308,7 +282,7 @@ header::before {
   /* gap: 20px; */
   background: url("../images//bg_news-item.png") no-repeat;
   /* background-position: 0; */
-  width: 100vw;
+  width: 100%;
   height: 1000px;
   margin: 0 auto;
   position: relative;
@@ -510,7 +484,7 @@ header::before {
 /* ===== 서포터즈 ===== */
 .support {
   width: 100%;
-  height: 700px;
+  height: 690px;
   background: url("../images/supporter_bg.jpg") no-repeat;
 }
 
@@ -889,6 +863,15 @@ header::before {
   position: relative;
 }
 
+.floating-fox:hover .signature-buy {
+  display: block;
+}
+
+.floating-wrap a {
+  display: inline-block;
+  width: 100px;
+}
+
 .signature-buy {
   display: none;
   position: absolute;
@@ -906,36 +889,18 @@ header::before {
   z-index: 999999;
 }
 
-.floating-fox:hover .signature-buy {
-  display: block;
-}
-
-.textBox {
+.signature-buy .textBox {
   position: absolute;
   top: 15px;
   left: 17px;
   color: #fff;
 }
 
-.textBox svg {
+.signature-buy .textBox svg {
   width: 15px;
   height: 15px;
   color: #fff;
 }
-
-.floating-wrap a {
-  display: inline-block;
-  width: 100px;
-}
-
-/* .fox-icon::before {
-  content: "";
-  display: none;
-  position: absolute;
-  width: 50px;
-  height: 100px;
-  background-color: #f43b00;
-} */
 
 .floating-wrap button {
   width: 25px;
