--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
 @charset "utf-8";
+
+@import url("responsive.css");
 * {
   margin: 0;
   padding: 0;
@@ -25,7 +27,7 @@ body {
 }
 
 .container {
-  width: 100%;
+  width: 100vw;
   height: auto;
   padding: 0 12%;
 }
@@ -79,6 +81,12 @@ body {
   /* max-width: 1800px; */
   height: 120px;
   z-index: 1;
+}
+
+.header-inner .hamburger {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 /* logo */
 .header .logo {
@@ -195,7 +203,7 @@ body {
   /* background: url("../images/banner_img_row.png") no-repeat;
   background-size: cover; */
   display: block;
-  width: 100%;
+  width: 100vw;
   height: 1000px;
   position: relative;
   top: 0;
@@ -211,12 +219,12 @@ body {
 /* 배경이미지 img 넣기 */
 .banner-texBox img {
   display: block;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
   top: 0;
-  width: 100%;
+  width: 100vw;
 }
 
 .banner-textBox {
