--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import url("responsive.css");
+
 * {
   margin: 0;
   padding: 0;
@@ -18,11 +18,13 @@ li {
 }
 
 html {
-  width: auto;
+  width: 100%;
+  height: 100vh;
 }
 
 body {
   width: 100%;
+  height: 100vh;
   white-space: nowrap;
 }
 
@@ -58,6 +60,7 @@ body {
   align-items: center;
 }
 .header:hover {
+  width: 100vw;
   height: calc(250px + 120px);
   /* height: 200px; */
 }
@@ -100,6 +103,8 @@ body {
   width: 120px;
   height: 120px;
 }
+
+
 /* nav */
 .nav {
   /* background-color: antiquewhite; */
@@ -197,8 +202,8 @@ body {
   line-height: 1.92;
 }
 
-/* =====배너=====*/
 
+/* =====배너=====*/
 .banner {
   /* background: url("../images/banner_img_row.png") no-repeat;
   background-size: cover; */
