--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ body {
 }
 
 .header-inner .hamburger {
-  position: relative;
+  position: absolute;;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -432,12 +432,15 @@ body {
 /*====== notice ======*/
 .notice {
   display: block;
-  width: 100%;
+  width: 100vw;
   height: 850px;
+  position: relative;
 }
 
 .notice-header {
   margin-bottom: 70px;
+  display: block;
+  margin: 0 auto;
 }
 
 .notice-title {
